# Build the apps

include_directories(${RYAN_DEBUG_INCLUDE_DIRS})

#option (BUILD_APPS_DEPEND_PCL
#	"Build apps that depend on PCL"
#	ON)

macro(addappdir appname appdefault)
	option(BUILD_APP_${appname}
		"Build ${appname} app"
		${appdefault})
	if(BUILD_APP_${appname})
		add_subdirectory(${appname})
	endif()
endmacro(addappdir appname appdefault)

#add_subdirectory (absorb-slab)
#add_subdirectory (atmosplot)
addappdir(arm-info ON)
addappdir(arm-sacr ON)
addappdir(combo ON)
addappdir(comborows ON)
addappdir(conv-units ON)
addappdir(ddscat-data ON)
addappdir(ddscat-ddpar ON)
addappdir(ddscat-generate-ellipsoid ON)
addappdir(ddscat-output ON)
addappdir(ddscat-output-extract ON)
addappdir(ddscat-output-extract-orientations ON)
addappdir(ddscat-output-ingest ON)
addappdir(ddscat-postprocess ON)
addappdir(ddscat-regenerate-run ON)
addappdir(ddscat-test ON)
addappdir(expand-shorthand ON)
addappdir(getm ON)
addappdir(guess-temp ON)
addappdir(image-basic ON)
addappdir(liu-regenerate-runs ON)
#addappdir(mie-onesphere ON)
#addappdir(mie-slice ON)
addappdir(oneellip ON)
addappdir(orientation-ensembles ON)
addappdir(orientation-output-table ON)
addappdir(orientation-weights ON)
addappdir(orientation-weights-1d ON)
addappdir(orientation-weights-3d ON)
addappdir(orientation-weights-3d-random ON)
addappdir(orientation-weights-ddscat ON)
addappdir(radar-relations ON)
addappdir(rpline ON)
addappdir(rtmath-version ON)
addappdir(shape ON)
addappdir(shape-extract ON)
addappdir(shape-hash ON)
addappdir(shape-hull ON)
addappdir(shape-perturb-interior ON)
addappdir(shape-rehash ON)
addappdir(stats ON)
#addappdir(tmatrix-ddscat-extract ON)
#addappdir(tmatrix-oneellip ON)
#addappdir(tmatrix-optimize-with-ddscat OFF)
#addappdir(tmatrix-slice ON)
addappdir(visualize-orientation-weights OFF)
addappdir(visualize-shape-batch OFF)
addappdir(visualize-shape-batch-fast OFF)
addappdir(voronoi ON)

#add_subdirectory (da)
#add_subdirectory (db-catalog-ddscat)
#add_subdirectory (ddparse)
#add_subdirectory (ddscat)
#add_subdirectory (ddscat-decimate)
#add_subdirectory (ddscat-genparams)
	##add_subdirectory (ddscat-regenerate-shapes)
	#add_subdirectory (garrett)
#add_subdirectory (roottest)
	##add_subdirectory (sector)

	#if (BUILD_APPS_DEPEND_PCL)
	##add_subdirectory (shape-hexplate)
	##add_subdirectory (shape-rectprism)
	#add_subdirectory (shape-rosette)

	#add_subdirectory (shape-sector-snowflake)
	#endif()
##add_subdirectory (stats-ddscat-combined-plots)
	##add_subdirectory (tmatrix-convert-from-ddscat)
#add_subdirectory (transmittance)
#add_subdirectory (uuid)
#if (BUILD_APPS_SHAPE)
	#	add_subdirectory (vtktest)
	#endif()
#	add_subdirectory (mttest)

